# TransferOps

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: __init__.py  config.py  db.py  main.py  models.py  units.py
app/services/: controller.py  disk.py  integrations.py  learning.py  library.py  lifecycle.py  logging.py  manual_requests.py  metadata.py  qbittorrent.py  rss.py  schemas.py  scope.py  scoring.py  settings.py
app/templates/: dashboard.html
scripts/: check_transferops_mcp.py  dev.sh  run.sh  transferops_mcp.py
tests/: conftest.py  test_api.py  test_controller.py  test_metadata.py  test_transferops_mcp.py
