[project]
name = "transferops"
version = "0.1.0"
description = "Local-first operations controller for policy-governed transfer queues, disk budgets, and audit workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "apscheduler>=3.10.4,<4",
  "fastapi>=0.116.0,<1",
  "feedparser>=6.0.11,<7",
  "httpx>=0.28.1,<1",
  "jinja2>=3.1.6,<4",
  "mcp>=1.13.0,<2",
  "pydantic-settings>=2.10.1,<3",
  "python-multipart>=0.0.20,<1",
  "requests>=2.32.5,<3",
  "sqlalchemy>=2.0.43,<3",
  "structlog>=25.4.0,<26",
  "uvicorn>=0.35.0,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1,<9",
  "pytest-cov>=6.2.1,<7",
  "ruff>=0.12.10,<1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["B008"]
